--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files/SQL Anywhere 12/Java/sajdbc4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ASUS/Documents/GitHub/swingx/swingx-core-1.6.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="lib" path="C:/Program Files/SQL Anywhere 16/Java/sajdbc4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vanessa/Documents/IGE/3º ANO/2º SEMESTRE/SISTEMAS DE INFORMAÇÃO DISTRIBUÍDOS/Projecto/bibliotecas/swingx-core-1.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
